Fix for extra space under the canvas element.

--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,5 @@ body
 .centered-content canvas
 {
     display: inline-block;
+    vertical-align: middle;
 }
